Tue Dec 07 18:48:27 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/Makefile.am src/ctlib/Makefile.am:
	* src/dblib/Makefile.am src/odbc/Makefile.am:
	* src/server/Makefile.am src/tds/Makefile.am:
	- give a priority order to libraries

Mon Dec 06 15:38:56 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: fix state change

Mon Dec 06 14:28:28 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c: remove printf
	* src/tds/convert.c: cleanup
	* src/tds/query.c: reuse tds_to_quering

Sun Dec 05 21:03:50 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS: updated
	* include/ctlib.h include/tds.h src/ctlib/ct.c:
	* src/tds/mem.c src/tds/query.c src/tds/token.c:
	- removed cursor_client_id, use direct TDSCURSOR*

Fri Dec 03 21:14:48 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/tds/mem.c src/tds/query.c:
	* src/tds/tds_checks.c:
	- cleanup
	- renamed TDSSOCKET->cursor in TDSSOCKET->cursors
	- avoid pointer to garbage

Fri Dec 03 17:46:20 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS: update
	* include/tds.h src/ctlib/ct.c src/tds/mem.c src/tds/query.c:
	* src/tds/tds_checks.c src/tds/token.c:
	- update docs
	- make dynamics a linked list
	- use a pointer to current cursor instead of client_id in TDSSOCKET
	* src/tds/login.c: update docs

Thu Dec 02 14:20:45 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/dblib/dblib.c src/tds/iconv.c:
	* src/tds/mem.c src/tds/tds_checks.c src/tds/token.c:
	* src/tds/write.c src/tds/unittests/t0003.c:
	* src/tds/unittests/t0004.c:
	- make TDSSOCKET->env just a field so to avoid the extra allocation

Thu Dec 02 13:36:00 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/tds/unittests/dynamic1.c:
	- fix for tests
	* src/tds/data.c: set on_server.column_size correctly
	* include/tds.h src/tds/mem.c:
	- cleanup
	- unset current_results if needed